--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,64 @@
+
+.flexContainer {
+    background-color: rgba(166, 250, 239, 0.554);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(rgb(247, 12, 12));
+}
+
 .board{
     width: 500px;
     height: 500px;
     display: grid;
+
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 300px;
+    min-height: 300px;
+    width: 60vw;
+    height: 60vw;
+    max-width: 600px;
+    max-height: 600px;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+.buttons{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+button {
+    border-radius: 10px;
+    font-weight: 600;
+    text-align: center;
+    transition: all 0.2s;
+    
+}
+.board:hover {
+    cursor: pointer;
+}
+.blackButton {
+    background-color: black;
+    color: white;
+}
+.blackbutton:hover {
+    background-color: white;
+    color: black;
+}
+.randomButton {
+    background:linear-gradient(0.25turn, #f65cfc, #ebf8e1, #583cf6);
+}
+input {
+    width: 50px;
 }
